# voice_text_chat_on_local_whisper

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/app/: __main__.py  app.py  bootstrap.py  config.py  context.py  events.py  openai.py  whisper.py  worker.py
src/app/workers/: chat.py  cron.py  display.py  listner.py  monitor.py  think.py  transcribe.py
